# numsec

./: .gitignore  README.md  pyproject.toml
src/numsec/: __init__.py  analyze.py  cli.py  exceptions.py  utils.py
src/numsec/templates/: __init__.py
src/numsec/templates/templates/basic/: .gitignore  NUMSEC.md  README.md  requirements.txt
src/numsec/templates/templates/basic/.cursor/rules/: numsec.mdc
src/numsec/templates/templates/basic/src/app/: main.py
